--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/cli": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
-    "motion": "^12.29.2",
+    "motion": "^12.29.3",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.9.1",
+    "simple-icons": "^16.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
