--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@tailwindcss/cli": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash-es": "^4.17.23",
     "lucide-react": "^0.563.0",
-    "motion": "^12.29.3",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
+    "react-wrap-balancer": "^1.1.1",
     "resend": "^6.9.1",
     "simple-icons": "^16.7.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
